deployment/k8/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-app-deploy
  labels:
    app: todolist-app-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: todolist-app
  template:
    metadata:
      labels:
        app: todolist-app
        role: backend
    spec:
      containers:
        - name: todolist-app-container
          image: nsnikhil10/todolist:v0.1
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
          startupProbe:
            httpGet:
              path: /ping
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
