deployment/k8/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist-app-svc
spec:
  selector:
    app: todolist-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
