deployment/k8/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist-db-svc
spec:
  selector:
    app: todolist-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
